--- a/tutorial/html/cost_sensitive_classif/index.html
+++ b/tutorial/html/cost_sensitive_classif/index.html
@@ -746,7 +746,7 @@ performance(pred, measures = list(wf.costs, mmce))
 </code></pre>
 
 <pre><code class="r">th = c(1/55, 1/4.5, 1/9)
-names(th) = wf.task$task.desc$class.levels
+names(th) = getTaskDescription(wf.task)$class.levels
 pred.th = setThreshold(pred, threshold = th)
 performance(pred.th, measures = list(wf.costs, mmce))
 </code></pre>
